<resources>
    <string name="app_name">uas_mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_screen_text">Books are windows to knowledge, libraries are gateways to adventure</string>
    <string name="second_screen_text">In the Book Pages, the Art of Storytelling, the Library Becomes a Stage</string>
    <string name="third_screen_text">Every Book Is a Work of Art</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="nama">Name</string>
    <string name="tempatLahir">Birth Place</string>
    <string name="tanggalLahir">Birth Data</string>
    <string name="noTelepon">No Telepon</string>
    <string name="btnLogin">Login</string>
    <string name="btnNext">Next</string>
    <string name="btnPrev">Previous</string>
    <string name="btnRegistrasi">Registrasi</string>
    <string name="add_new">Add</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="back">back</string>
    <string name="display">Display</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="btnPinjam">Booking\n</string>
    <string name="btnRead">Read Online</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Vivamus eleifend, libero id tempor condimentum, arcu ipsum fermentum dui, eu efficitur elit odio nec arcu. Sed ut dui vel sapien tincidunt aliquet. Suspendisse ut ultrices tortor. Proin hendrerit, ipsum ut vehicula feugiat, dolor purus tincidunt lectus, eget finibus elit justo at libero. Duis in ultrices dui. Fusce vestibulum vulputate justo, ut dictum dui laoreet at. Integer ac fringilla ex. In hac habitasse platea dictumst. Duis non ligula ac eros venenatis feugiat. Vivamus a lacus velit. Sed ut imperdiet justo. Sed posuere libero in risus bibendum, eget malesuada lacus tincidunt.
    In hac habitasse platea dictumst.
    Vivamus luctus tincidunt metus, eget
    sollicitudin sapien consectetur ac. Sed vestibulum laoreet lacus ac bibendum. Integer fermentum lectus
        non arcu malesuada fermentum. Proin volutpat tincidunt efficitur. Nunc</string>
    <string name="btnUpdate">"Update "</string>
    <string name="last_seen">Last Seen</string>

</resources>