<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bh2"
        android:layout_marginBottom="@dimen/_40sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/Primary"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeWidth="2dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="text"
            app:boxStrokeColor="@color/Primary"

/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/Primary"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>



  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnLogin"
      android:layout_width="@dimen/_80sdp"
      android:layout_height="@dimen/_45sdp"
      android:text="@string/btnLogin"
      android:textSize="@dimen/_15ssp"
      android:fontFamily="@font/poppins"
      style="@style/Widget.Material3.Button.IconButton.Filled"
      android:backgroundTint="@color/black"
      android:textColor="@color/Primary"
      />

    <TextView
        android:id="@+id/txtRegistrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="Don't have an account?\nRegister here"
        android:onClick="register"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAlignment="center"/>
</LinearLayout>