<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:onClick="registerBack"
        android:text="Back"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/registerContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_register"
        android:padding="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">



        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/nama"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/rePasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Re-enter Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rePasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/repassword"
            app:layout_constraintBottom_toTopOf="@+id/tempatLahirInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rePasswordInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Place of Birth -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tempatLahirInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/tempatLahir"
            app:layout_constraintBottom_toTopOf="@+id/tanggalLahirInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tempatLahirInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="text"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Date of Birth Input with DatePicker -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tanggalLahirInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/tanggalLahir"
            app:layout_constraintBottom_toTopOf="@+id/noTeleponInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempatLahirInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/poppins"
                android:onClick="showDatePicker"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noTeleponInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:hint="@string/noTelepon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanggalLahirInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noTeleponInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="phone"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="435dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrasi"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/btnRegistrasi"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noTeleponInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>