<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendData">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewKodeBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Kode Buku">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextKodeBuku"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewJudulBuku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Judul Buku">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextJudulBuku"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewPengarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pengarang">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPengarang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewPenerbit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Penerbit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPenerbit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewTempatTerbit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tempat Terbit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTempatTerbit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textViewJumlahSalinan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Jumlah Salinan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextJumlahSalinan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Sisipkan tombol yang sesuai dengan pola sebelumnya -->
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:textSize="18sp"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>
