<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.FirstScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:padding="6dp"
        android:paddingEnd="16dp"
        android:text="Skip"
        android:onClick="login"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="609dp"
        android:layout_height="329dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="92dp"
        android:scaleType="fitXY"
        android:src="@drawable/first_frag_remove"
        app:layout_constraintBottom_toTopOf="@+id/fsQuotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/fsQuotes"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/first_screen_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsQuotes"
        app:layout_constraintVertical_bias="0.4
">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrev"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/btnPrev"
            android:textColor="@color/Primary"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/Dark_Primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/btnNext"
            android:textColor="@color/Primary"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/btnPrev"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/Dark_Primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>